Cambio referencias a condición de conjunto abierto y a th Moran (#24)

--- a/memoria/tex/capitulos/capitulo-1.tex
+++ b/memoria/tex/capitulos/capitulo-1.tex
@@ -422,8 +422,9 @@ En $\R^2$ dotado de la topología usual, consideramos una recta cualquiera, llam
 \end{ejemplo}
 
 \subsection{Relación entre los distintos tipos de dimensión fractal}
+\label{subsection:relacion-dimensiones}
 
-La dimensión por cajas, aunque útil en la práctica, al comienzo de la sección \ref{subsection:dim-Hausdorff} hemos comprobado que tiene algunos problemas. No obstante, para muchos fractales, y en particular para los que cumplen la \textit{condición de conjunto abierto} (véase \cite{Wagon}), resulta más sencillo computacionalmente calcular su dimensión por cajas frente a su dimensión de Hausdorff.
+La dimensión por cajas, aunque útil en la práctica, al comienzo de la sección \ref{subsection:dim-Hausdorff} hemos comprobado que tiene algunos problemas. No obstante, para muchos fractales, y en particular para los que cumplen la \textit{condición de conjunto abierto} (véase sección \ref{section:sfi-conjuntos-autosimilares}), resulta más sencillo computacionalmente calcular su dimensión por cajas frente a su dimensión de Hausdorff.
 
 En general, y como se puede comprobar en \cite[Sección 3.1]{alma991007022459704990}, ocurre que la dimensión por cajas acota superiormente a la dimensión de Hausdorff, esto es, dado $A\subset\R^n$:
 $$
@@ -438,7 +439,7 @@ $$
 
 Este resultado fue originalmente probado por \textit{Edward Szpilrajn}, véase \cite[Capítulo VII]{Hurewicz-Wallman}.
 
-Por otro lado, si nos restringimos a conjuntos totalmente autosimilares, existe un resultado que relaciona la dimensión de Hausdorff y la dimensión por cajas para conjuntos totalmente autosimilares: el teorema de Moran \cite{Moran}. Este resultado nos asegura que en estos casos la dimensión por cajas y la dimensión de Hausdorff coinciden.
+Por otro lado, si nos restringimos a conjuntos totalmente autosimilares, existe un resultado que relaciona la dimensión de Hausdorff y la dimensión por cajas para conjuntos totalmente autosimilares: el teorema de Moran (véase teorema \ref{th:Moran}). Este resultado nos asegura que en estos casos la dimensión por cajas y la dimensión de Hausdorff coinciden. 
 
 En conclusión, para un conjunto no vacío y acotado $A\subseteq\R^n$, se tiene que:
 
