--- a/memoria/tex/capitulos/capitulo-1.tex
+++ b/memoria/tex/capitulos/capitulo-1.tex
@@ -300,7 +300,7 @@ donde $m_1,\dots,m_n$ son enteros, tendríamos $\R^n$ dividido en `cajas', de di
 \begin{wrapfigure}{l}{0cm}
 \includegraphics[scale=0.14, trim={0cm 0.35cm 0cm 0.5cm}, clip]{./img/triangulo-dividido.png}
 \end{wrapfigure}
-Un ejemplo clarificador podría ser el de un triángulo equilátero $T$ de lado 1, el cual podemos recubrir con 4 triángulos equiláteros de lado $\frac 1 2$. A su vez podríamos recubrir estos 4 triángulos con otros 4 triángulos de lado $\frac{1}{4}$, obteniendo así un recubrimiento de $T$ con $16=2^{2\cdot 2}$ triángulos de lado $\frac{1}{4}=\frac{1}{2^2}$. Si repetimos este proceso y teniendo en cuenta que el diámetro de un triángulo equilátero es la longitud de sus lados, podemos tomar $\delta=\frac{1}{2^n}$ y recubrir $T$ con $N_\delta(T)=2^{2n}$ triángulos equiláteros. Aplicando \ref{eq:dim-cajas}, tenemos por tanto que
+Un ejemplo clarificador podría ser el de un triángulo equilátero $T$ de lado 1, el cual podemos recubrir con 4 triángulos equiláteros de lado $\frac 1 2$. A su vez podríamos recubrir estos 4 triángulos con otros 4 triángulos de lado $\frac{1}{4}$, obteniendo así un recubrimiento de $T$ con $16=2^{2\cdot 2}$ triángulos de lado $\frac{1}{4}=\frac{1}{2^2}$. Si repetimos este proceso y teniendo en cuenta que el diámetro de un triángulo equilátero es la longitud de sus lados, podemos tomar $\delta=\frac{1}{2^n}$ y recubrir $T$ con $N_\delta(T)=2^{2n}$ triángulos equiláteros. Aplicando (\ref{eq:dim-cajas}), tenemos por tanto que
 $$
 \dim_B(T)=\lim_{n\rightarrow\infty}\dfrac{\log(2^{2n})}{\log(2^n)} = \dfrac{2n\log(2)}{n\log(2)}=2.
 $$
