--- a/memoria/tex/capitulos/capitulo-3.tex
+++ b/memoria/tex/capitulos/capitulo-3.tex
@@ -182,6 +182,7 @@ En realidad el teorema en su versión original está enunciado para polinomios d
 Sobre la dicotomía entre qué conjuntos de Julia son conexos y cuales son polvareda surge el conocido \textbf{conjunto de Mandelbrot}, el cual adelantamos que está formado por los números complejos $c$ tales que su conjunto de Julia $\mathcal{J}_c$ es conexo. 
 
 \section{El conjunto de Mandelbrot}
+\label{section:Mandelbrot}
 
 Como ya veníamos anunciando al final de la sección \ref{section:conexos-polvaredas}, el conjunto de Mandelbrot está formado por los $c\in\C$ tales que $\mathcal{J}_c$ es conexo. La idea inicial de \textit{Benoit Mandelbrot} para graficar el conjunto que denotaremos a partir de ahora como $\mathcal{M}$ fue pintar de negro los puntos del plano cuyo conjunto de Julia fuese conexo y de blanco el resto. De entrada parece una tarea titánica graficar, para cada punto del plano (aunque realmente sería solo un subconjunto suficientemente representativo), su conjunto de Julia y decidir si éste es o no conexo, pues en algunos casos la decisión se torna muy complicada.
 
@@ -323,6 +324,7 @@ En la imagen \ref{fig:detalles-mandelbrot} (b) podemos ver una representación d
 Hasta el momento todo lo explicado y todas las imágenes obtenidas se han basado en la familia de funciones $\{P_c(z)\}_{c\in\C}=\{z^2+c\}_{c\in\C}$. Sin embargo, y como cabe esperar, la definición de los conjuntos de Julia como conjuntos frontera entre el conjunto de puntos prisioneros y de escape es completamente válido para las iteradas de cualquier función, o mejor dicho, para cualquier familia de funciones. En esta sección trataremos de extender los conocimientos obtenidos hasta ahora a otras funciones.
 
 \subsection{Familia $\{z^N+c\}_{c\in\C}$}
+\label{subsection:julia-mandelbrot-generalizados}
 
 La extensión más natural y la que nos proporcionará resultados más llamativos consiste en cambiar el exponente de la función polinómica $P_c(z)$, a la cual ahora denotaremos como $P_{c,N}(z)=z^N+c$, con $N\geq 2$ natural para enfatizar el exponente. Es fácil comprobar que el teorema \ref{th:escape} es igual de válido con esta familia de funciones independientemente del exponente, por lo que el algoritmo sigue siendo el mismo, solo que en la función \verb|Julia| debemos cambiar el exponente. Además, la orden \verb|JuliaSetPlot| ya presentada en la sección \ref{subsection:representacion-julia} admite la posibilidad de indicarle una función arbitraria. Es esta la forma en la que hemos graficado las imágenes \ref{fig:julia-generalizados}.
 
