Definición de Ray-Tracing (#49)

--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -115,6 +115,11 @@
 
 \import{tex/capitulos/}{capitulo-6.tex}
 
+\chapter{Introducción al \textit{Ray-Tracing}}
+\label{chap:ray-tracing}
+
+\import{tex/capitulos/}{capitulo-7.tex}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % REFERENCIAS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
