--- a/memoria/tex/lista-abreviaturas.tex
+++ b/memoria/tex/lista-abreviaturas.tex
@@ -5,4 +5,5 @@
 \item GPU: Graphics Processing Unit (Unidad de Procesamiento Gráfico)
 \item SDF: Signed Distance Function
 \item SFI: Sistema de Funciones Iteradas
+\item RT: Ray-Tracing
 \end{itemize}
