--- a/memoria/tex/bibliography.tex
+++ b/memoria/tex/bibliography.tex
@@ -38,4 +38,6 @@
 
 \bibitem{renderingcontextdoc} \textit{WebGLRenderingContext - Web APIs | MDN}. (2022, 20 enero). WebGLRenderingContext. \url{https://developer.mozilla.org/en-US/docs/Web/API/WebGLRenderingContext}
 
+\bibitem{RT-que-es} López, P. (2020, 30 abril). \textit{Ray Tracing: ¿Qué es y para qué sirve? - Definición}. GEEKNETIC. \url{https://www.geeknetic.es/Ray-Tracing/que-es-y-para-que-sirve}
+
 \end{thebibliography}
